# Vizuara-Optimized-Offline-FrontEnd-

./: README.md  next.config.js  package-lock.json  package.json
src/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: connection_manager.rs  const_values.rs  data_structure_manager.rs  dialog_displayer.rs  file_manager.rs  main.rs  user_preference_manager.rs
src/CustomCSS/: Font.module.css  TitleBar.module.css
src/pages/: index.jsx
src/pages/Components/: content_list_displayer.jsx  downloadbar.jsx  sidebar.jsx  titlebar.jsx
src/pages/Components/design/: content_displayer.module.css  downloadbar.module.css  sidebar.module.css
src/pages/CustomFunctionalities/: BasicShapes.jsx
src/pages/SplashScreen/: splash.jsx  splash.module.css
