[package]
name = "Vizuara"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
webbrowser = "0.8.2"
serde_json = "1.0"
dirs = "4.0"
zip = "0.5"
zip-extensions = "0.6"
my_internet_ip = "0.1.1"
lazy_static = "1.4.0"
once_cell = "1.16.0"
magic-crypt = "3.1.12"
dialog = "0.3.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["fs-all", "protocol-asset", "shell-open", "window-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
